[package]
name = "deno_unsync"
version = "0.1.1"
edition = "2021"
authors = ["the Deno authors"]
license = "MIT"
repository = "https://github.com/denoland/deno_unsync"
description = "A collection of adapters to make working with Tokio single-threaded runtimes easier"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
criterion = { version ="0.5.1", features = ["async_futures"] }

[lib]
name = "deno_unsync"

[[bench]]
name = "my_benchmark"
harness = false
